@@ -11,6 +11,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -29,7 +30,7 @@ public class ProductService {
 
         return inventories.stream()
                 .map((element) -> mapper.map(element, ProductDto.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public ProductDto getProductById(Long id) {
